pvutility-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pvutility-ingress
  namespace: coreapps
 
  annotations:
    # kubernetes.io/tls-acme: "true"
    # nginx.ingress.kubernetes.io/app-root: /get_data.php
    # kubernetes.io/ingress.class: "pvutility-ingress"
    # cert-manager.io/cluster-issuer: "letsencrypt-prod-pvutility"
    kubernetes.io/ingress.class: "public-ingress"
    cert-manager.io/cluster-issuer: "letsencrypt-public-ingress"
    # nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    # nginx.ingress.kubernetes.io/ingress.allow-http: "true"
    # nginx.ingress.kubernetes.io/proxy-body-size: 500m
    # nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - pvutility.iplon.co.in
    secretName: pvutility-tls-prod

  rules:
  - host: pvutility.iplon.co.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iplon-apache-pvutility
            port:
              number: 8080
